Added service section with cards

--- a/index.html
+++ b/index.html
@@ -26,5 +26,26 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur officiis quas voluptates quo, molestias dicta. Amet repellendus maxime Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, autem?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, dignissimos.</p>
         <button class="btn">Order Food</button>
     </section>
+
+    <div class="service-container">
+        <h1 class="h-primary center">Our Services</h1>
+        <div id="services">
+            <div class="box">
+                <img src="images/food4.jfif" alt="">
+                <h2 class="h-secondary center">Food Ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sequi esse nam perspiciatis. Maiores sunt quidem deleniti iusto, possimus doloremque ratione et, eius voluptas, expedita pariatur provident ipsa harum fugit dolor consequuntur sint ad!</p>
+            </div>    
+            <div class="box">
+                <img src="images/food5.jfif" alt="">
+                <h2 class="h-secondary center">Take Away</h2>
+                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sequi esse nam perspiciatis. Maiores sunt quidem deleniti iusto, possimus doloremque ratione et, eius voluptas, expedita pariatur provident ipsa harum fugit dolor consequuntur sint ad!</p>
+            </div>
+            <div class="box">
+                <img src="images/food3.jfif" alt="">
+                <h2 class="h-secondary center">Home Delivery</h2>
+                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sequi esse nam perspiciatis. Maiores sunt quidem deleniti iusto, possimus doloremque ratione et, eius voluptas, expedita pariatur provident ipsa harum fugit dolor consequuntur sint ad!</p>
+            </div>       
+        </div>
+    </div>
 </body>
 </html>
